--- a/iptv.html
+++ b/iptv.html
@@ -339,7 +339,9 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td><div align="center">46</div></td>
     <td><div align="center"><a href="http://u6.gg/f7UBU">CCTV4K</a></div></td>
-    <td colspan="3"><div align="center">網速、設備配置需要很高</div>      <div align="center"></div>      <div align="center"></div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
   </tr>
   <tr>
     <td><div align="center">47</div></td>
