--- a/iptv.html
+++ b/iptv.html
@@ -285,14 +285,14 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td><div align="center">38</div></td>
     <td><div align="center"><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227238/10000100000000060000000000987130_0.smil">TVS-1HD</a></div></td>
-    <td><div align="center"></div></td>
+    <td><div align="center"><a href="http://112.89.121.22:80/PLTV/88888973/224/3221225752/10000100000000060000000000334591_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7807,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowmoxHIkVT2YRc54nGjGZOvg:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
     <td><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td><div align="center">39</div></td>
     <td><div align="center"><a href="rtsp://183.58.12.204/PLTV/88888905/224/3221227007/00000100000000060000000000554908_0.smil">TVS-1</a></div></td>
-    <td><div align="center"></div></td>
+    <td><div align="center"><a href="http://112.89.121.22:80/PLTV/88888973/224/3221225723/10000100000000060000000000334156_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,2441,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowmyN/Purpl112KWxXhubChW:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
     <td><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
