--- a/bookmarks.html
+++ b/bookmarks.html
@@ -73,7 +73,7 @@ header-img: "img/fm/03.jpg"
   </tr>
   <tr>
     <td><div align="center"><a href="https://github.com/gfw-breaker/ssr-accounts/blob/master/README.md">SSR-Github</a></div></td>
-    <td><div align="center"><a href="https://www.ssrtool.com/tool/free_ssr">SSRTool</a></div></td>
+    <td><div align="center"><a href="https://m.stool.gq/free_ssr">SSRTool</a></div></td>
   </tr>
   <tr>
     <td colspan="2"><div align="center">H</div></td>
