--- a/iptv.html
+++ b/iptv.html
@@ -256,9 +256,9 @@ header-img: "img/fm/05.jpg"
   </tr>
   <tr>
     <td><div align="center">34</div></td>
-    <td><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_8a1764ff84b211e892905cb9018cf0d4.m3u8">廣州影視</a></div></td>
-    <td><div align="center"></div></td>
-    <td><div align="center"></div></td>
+    <td><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_8a1764ff84b211e892905cb9018cf0d4">廣州影視</a></div></td>
+    <td><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_8a1764ff84b211e892905cb9018cf0d4.flv">A</a></div></td>
+    <td><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_8a1764ff84b211e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
