--- a/iptv.html
+++ b/iptv.html
@@ -82,7 +82,7 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td><div align="center">9</div></td>
     <td><div align="center"><a href="http://zikbo.lofter.com/inews">無線新聞</a></div></td>
-    <td><div align="center"><a href="http://edge20-1.edgeware.hk4.tvb.com/session/75a1e124-14ed-11e9-94b1-005056b1026a/qh33qv/newslive/smil:mobilehd_inews.smil/chunklist_b1096000.m3u8">A</a></div></td>
+    <td><div align="center"><a href="http://94pan.lofter.com/inews">A</a></div></td>
     <td><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
