--- a/iptv.html
+++ b/iptv.html
@@ -82,7 +82,7 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td><div align="center">9</div></td>
     <td><div align="center"><a href="http://zikbo.lofter.com/inews">無線新聞</a></div></td>
-    <td><div align="center"><a href="http://94pan.lofter.com/inews">A</a></div></td>
+    <td><div align="center"></div></td>
     <td><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
@@ -96,7 +96,7 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td><div align="center">11</div></td>
     <td><div align="center"><a href="http://e1.vdowowza.vip.hk1.tvb.com/tvblive/smil:mobilehd_financeintl.smil/playlist.m3u8">無線財經資訊台</a></div></td>
-    <td><div align="center"><a href="http://edge28-1.edgeware.hk4.tvb.com/session/fc65c940-14ee-11e9-8954-005056903a13/qh33qv/newslive/smil:mobilehd_finance.smil/chunklist_b1096000.m3u8">A</a></div></td>
+    <td><div align="center"></div></td>
     <td><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
@@ -589,7 +589,6 @@ header-img: "img/fm/05.jpg"
 </table>
 </body>
 </html>
-
 
 <!-- English Version -->
 <!-- <div class="en post-container">
