--- a/cantonese.html
+++ b/cantonese.html
@@ -69,22 +69,10 @@ header-img: "img/fm/01.jpg"
     <td><div align="center">魏</div></td>
   </tr>
   <tr>
-    <td><div align="center">aan</div></td>
-    <td><div align="center">安(普)</div></td>
-    <td><div align="center">an</div></td>
-    <td><div align="center">銀</div></td>
-  </tr>
-  <tr>
-    <td><div align="center">aap</div></td>
-    <td><div align="center">鴨</div></td>
-    <td><div align="center">ap</div></td>
-    <td><div align="center">噏</div></td>
-  </tr>
-  <tr>
-    <td><div align="center">aak</div></td>
-    <td><div align="center">呃</div></td>
-    <td><div align="center">ak</div></td>
-    <td><div align="center">厄</div></td>
+    <td><div align="center">aau</div></td>
+    <td><div align="center">抓</div></td>
+    <td><div align="center">au</div></td>
+    <td><div align="center">嘔</div></td>
   </tr>
   <tr>
     <td><div align="center">aam</div></td>
@@ -93,16 +81,34 @@ header-img: "img/fm/01.jpg"
     <td><div align="center">揞</div></td>
   </tr>
   <tr>
+    <td><div align="center">aan</div></td>
+    <td><div align="center">安(普)</div></td>
+    <td><div align="center">an</div></td>
+    <td><div align="center">銀</div></td>
+  </tr>
+  <tr>
     <td><div align="center">aang</div></td>
     <td><div align="center">罌</div></td>
     <td><div align="center">ang</div></td>
     <td><div align="center">鶯</div></td>
   </tr>
   <tr>
+    <td><div align="center">aap</div></td>
+    <td><div align="center">鴨</div></td>
+    <td><div align="center">ap</div></td>
+    <td><div align="center">噏</div></td>
+  </tr>
+  <tr>
     <td><div align="center">aat</div></td>
     <td><div align="center">壓</div></td>
     <td><div align="center">at</div></td>
     <td><div align="center">扤</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">aak</div></td>
+    <td><div align="center">呃</div></td>
+    <td><div align="center">ak</div></td>
+    <td><div align="center">厄</div></td>
   </tr>
   <tr>
     <td><div align="center">e</div></td>
@@ -135,6 +141,12 @@ header-img: "img/fm/01.jpg"
     <td><div align="center">要</div></td>
   </tr>
   <tr>
+    <td><div align="center">im</div></td>
+    <td><div align="center">厭</div></td>
+    <td><div align="center">in</div></td>
+    <td><div align="center">燕</div></td>
+  </tr>
+  <tr>
     <td><div align="center">ing</div></td>
     <td><div align="center">(M)明</div></td>
     <td><div align="center">ip</div></td>
@@ -153,16 +165,16 @@ header-img: "img/fm/01.jpg"
     <td><div align="center">愛</div></td>
   </tr>
   <tr>
-    <td><div align="center">ong</div></td>
-    <td><div align="center">昂</div></td>
-    <td><div align="center">ot</div></td>
-    <td><div align="center">(G)割</div></td>
-  </tr>
-  <tr>
     <td><div align="center">ou</div></td>
     <td><div align="center">奧</div></td>
     <td><div align="center">on</div></td>
     <td><div align="center">案</div></td>
+  </tr>
+  <tr>
+    <td><div align="center">ong</div></td>
+    <td><div align="center">昂</div></td>
+    <td><div align="center">ot</div></td>
+    <td><div align="center">(G)割</div></td>
   </tr>
   <tr>
     <td><div align="center">ok</div></td>
@@ -260,7 +272,6 @@ header-img: "img/fm/01.jpg"
 </table>
 </body>
 </html>
-
 
 
 
