--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ header-img: "img/fm/02.jpg"
   <div align="center">
     <p><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/img/soucoi/me.png" width="150" height="150" />
     </p>
-    <p>即使輸掉一切，也不要輸掉微笑：）</p>
+    <p>即使輸掉一切，也不要輸掉微笑:)</p>
   </div>
 </form>
 </body>
