--- a/movie.html
+++ b/movie.html
@@ -18,37 +18,48 @@ header-img: "img/fm/04.jpg"
 </head>
 
 <body>
-<p>*PC端推薦使用Edge瀏覽器播放</p>
 <table width="400" border="0">
   <tr>
-    <td><a href="https://iqiyi.com-l-iqiyi.com/20181220/20358_5b32e04b/1000k/hls/index.m3u8">無雙</a></td>
+    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/0A7B8005398F1992795559E2E8552DC7.m3u8">流浪星球</a></td>
   </tr>
   <tr>
-    <td><a href="https://bilibili.com-l-bilibili.com/20181218/7892_5c6db290/1000k/hls/index.m3u8">戇豆特工3</a></td>
+    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/0E71204BA3BFA044103F7FE6FD25EC04.m3u8">飛馳人生</a></td>
   </tr>
   <tr>
-    <td><a href="http://acfun.iqiyi-kuyun.com/ppvod/0A894F1E36D897C6CA2FF92D247F25C7.m3u8">毒液</a></td>
+    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/0C5FC770FA363F09F7C7B1C5A345A275.m3u8">瘋狂的外星人</a></td>
   </tr>
   <tr>
-    <td><a href="https://vip.kuyun99.com/ppvod/F9C5EA0F17092DFAD6FF8264EB37AC8A.m3u8">死侍2</a></td>
+    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/8C7C41F76F158168853043CBD7EF4B8C.m3u8">新喜劇之王</a></td>
   </tr>
   <tr>
-    <td><a href="https://video.fjhps.com/20180618/ArqVNfRA/index.m3u8">頭號玩家</a></td>
+    <td><a href="https://iqiyi.com-l-iqiyi.com/20181220/20358_5b32e04b/1000k/hls/index.m3u8">無雙</a><a href="https://video.fjhps.com/20180618/ArqVNfRA/index.m3u8"></a></td>
   </tr>
   <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/99BD52980E6944D9B319C9D2C12917BE.m3u8">巨齒鯊</a></td>
+    <td><a href="https://bilibili.com-l-bilibili.com/20181218/7892_5c6db290/1000k/hls/index.m3u8">戇豆特工3</a><a href="https://acfun.iqiyi-kuyun.com/ppvod/99BD52980E6944D9B319C9D2C12917BE.m3u8"></a></td>
   </tr>
   <tr>
-    <td><a href="http://hao.czybjz.com/ppvod/BC842B2FB444472B47F07EE8BE59F4C4.m3u8">摔跤吧！爸爸</a></td>
+    <td><a href="http://acfun.iqiyi-kuyun.com/ppvod/0A894F1E36D897C6CA2FF92D247F25C7.m3u8">毒液</a><a href="http://hao.czybjz.com/ppvod/BC842B2FB444472B47F07EE8BE59F4C4.m3u8"></a></td>
   </tr>
   <tr>
-    <td><a href="http://video.fjhps.com/20180302/ZL9uAjIM/index.m3u8">釜山行</a></td>
+    <td><a href="https://vip.kuyun99.com/ppvod/F9C5EA0F17092DFAD6FF8264EB37AC8A.m3u8">死侍2</a><a href="http://video.fjhps.com/20180302/ZL9uAjIM/index.m3u8"></a></td>
   </tr>
   <tr>
-    <td><a href="http://vip.kuyun99.com/ppvod/5635B5698EE3999102D07CC45703F96F.m3u8">古宅</a></td>
+    <td><a href="https://video.fjhps.com/20180618/ArqVNfRA/index.m3u8">頭號玩家</a><a href="http://vip.kuyun99.com/ppvod/5635B5698EE3999102D07CC45703F96F.m3u8"></a></td>
   </tr>
   <tr>
-    <td><a href="http://videos.fjhps.com/ppvod/9A9651C02867259879B1EBC94F5C8F41.m3u8">忌日快樂</a></td>
+    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/99BD52980E6944D9B319C9D2C12917BE.m3u8">巨齒鯊</a><a href="http://videos.fjhps.com/ppvod/9A9651C02867259879B1EBC94F5C8F41.m3u8"></a></td>
+  </tr>
+  <tr>
+    <td><a href="http://hao.czybjz.com/ppvod/BC842B2FB444472B47F07EE8BE59F4C4.m3u8">摔跤吧！爸爸</a><a href="https://acfun.iqiyi-kuyun.com/ppvod/6BD8DC2C0B50820F6570FC030411B992.m3u8"></a></td>
+  </tr>
+  <tr>
+    <td><a href="http://video.fjhps.com/20180302/ZL9uAjIM/index.m3u8">釜山行</a><a href="http://videos.fjhps.com/ppvod/A348D2DEC2F8862579B47DE2B97BD5D6.m3u8"></a></td>
+  </tr>
+  <tr>
+    <td><a href="http://vip.kuyun99.com/ppvod/5635B5698EE3999102D07CC45703F96F.m3u8">古宅</a><a href="http://videos.fjhps.com/ppvod/DB51988EBD667CF14FC720C74B29AA16.m3u8"></a></td>
+  </tr>
+  <tr>
+    <td><a href="http://videos.fjhps.com/ppvod/9A9651C02867259879B1EBC94F5C8F41.m3u8">忌日快樂</a><a href="http://acfun.iqiyi-kuyun.com/ppvod/B21F0E4FCA554452E07A43D82CD7056F.m3u8"></a></td>
   </tr>
   <tr>
     <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/6BD8DC2C0B50820F6570FC030411B992.m3u8">幼兒怨</a></td>
@@ -61,18 +72,6 @@ header-img: "img/fm/04.jpg"
   </tr>
   <tr>
     <td><a href="http://acfun.iqiyi-kuyun.com/ppvod/B21F0E4FCA554452E07A43D82CD7056F.m3u8">王牌教師麻辣出擊</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/9DA42818F497171A73A66A7044AE31E8.m3u8">市長夫人的祕密</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/98F531B40807107E4DEBBF6919AB173D.m3u8">有5個姐姐的我就注定單身了啊</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://video.fjhps.com/ppvod/DB7D76728A068F47142848B1EA951F76.m3u8">花甲男孩轉大人電影版</a></td>
-  </tr>
-  <tr>
-    <td><a href="http://vip.kuyun99.com/20180620/XnPGGYyt/index.m3u8">我們都是超能力者</a><a href="http://vs1.baduziyuan.com/20171215/KNtG0l75/index.m3u8"></a></td>
   </tr>
 </table>
 <p align="center">上一頁 <a href="https://hbpoon.github.io/movie/02/">下一頁</a></p>
