--- a/iptv.html
+++ b/iptv.html
@@ -127,7 +127,7 @@ header-img: "img/fm/05.jpg"
   </tr>
   <tr>
     <td><div align="center">18</div></td>
-    <td><div align="center"><a href="www.baitv.com/program/tvb-tvb11-w1.html">J2</a>*</div></td>
+    <td><div align="center"><a href="http://www.baitv.com/program/tvb-tvb11-w1.html">J2</a>*</div></td>
     <td><div align="center"><a href="http://120.198.235.68/103.89.176.45:8278/J2/playlist.m3u8">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
