--- a/iptv.html
+++ b/iptv.html
@@ -55,19 +55,19 @@ header-img: "img/fm/05.jpg"
   </tr>
   <tr>
     <td><div align="center">6</div></td>
-    <td><div align="center"><a href="http://epg.gdtv.cn/?c=3">广东体育</a></div></td>
+    <td><div align="center"><a href="http://epg.gdtv.cn/?c=3">廣東體育</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227818/10000100000000060000000005076859_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225750/10000100000000060000000000334588_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7840,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowknjg8NSqNVsWY2LwTOy6B9:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">7</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv5-plus-w1.html">CCTV-5+HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv5-plus/">CCTV-5+HD</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227192/10000100000000060000000000987131_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225705/10000100000000060000000000334542_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7819,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCown2FDVNG+ZNzdxPe0phXLWm:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">8</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv5-w1.html">CCTV-5HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv5/">CCTV-5HD</a></div></td>
     <td><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-5-CQ/1.m3u8">A</a></div></td>
     <td><div align="center"><a href="http://121.31.30.90:8085/ysten-business/live/cctv-5/1.m3u8">B</a></div></td>
   </tr>
@@ -241,91 +241,91 @@ header-img: "img/fm/05.jpg"
   </tr>
   <tr>
     <td><div align="center">37</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv1-w1.html">CCTV-1綜合HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv1/">CCTV-1綜合HD</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227270/10000100000000060000000001141346_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225768/10000100000000060000000000337107_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7818,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowlhOLuRCiHgtW469LYGcBty:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">38</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv2-w1.html">CCTV-2財經HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv2/">CCTV-2財經HD</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227634/10000100000000060000000004662503_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225767/10000100000000060000000000337109_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7808,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowlG9GiJF+eXKeOHX9LOxR9k:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">39</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv3-w1.html">CCTV-3綜藝</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv3/">CCTV-3綜藝HD</a></div></td>
     <td><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-3-CQ/1.m3u8">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td><div align="center">40</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv4-w1.html">CCTV-4中文國際HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv4/">CCTV-4中文國際HD</a></div></td>
     <td><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-4-CQ/1.m3u8">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td><div align="center">41</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv6-w1.html">CCTV-6電影</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv6/">CCTV-6電影</a></div></td>
     <td><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-6-CQ/1.m3u8">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td><div align="center">42</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv7-w1.html">CCTV-7軍事農業HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv7/">CCTV-7軍事農業HD</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227620/10000100000000060000000004662504_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.22:80/PLTV/88888973/224/3221225749/10000100000000060000000000334584_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7810,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowljL/8+efgIoZxjCG31rI2E:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">43</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv8-w1.html">CCTV-8電視劇</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv8/">CCTV-8電視劇</a></div></td>
     <td><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-8-CQ/1.m3u8">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td><div align="center">44</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv9-w1.html">CCTV-9紀錄HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv9/">CCTV-9紀錄HD</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227617/10000100000000060000000004662501_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225747/10000100000000060000000000334581_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7810,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowkpTXVpkkAilPfDJaVJmwBK:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">45</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv10-w1.html">CCTV-10科教HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv10/">CCTV-10科教HD</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227631/10000100000000060000000004662500_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225745/10000100000000060000000000334569_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7809,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCownO6/jvFpALITOLK1MIALYD:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">46</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv11-w1.html">CCTV-11戲曲HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv11/">CCTV-11戲曲HD</a></div></td>
     <td><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-11-HQ/1.m3u8">A</a></div></td>
     <td><div align="center"><a href="http://112.89.121.22:80/PLTV/88888973/224/3221225746/10000100000000060000000000334570_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,2574,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowmb+i5iFYpqMLmaK5Yjjnjh:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">47</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv12-w1.html">CCTV-12社會與法HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv12/">CCTV-12社會與法HD</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227576/10000100000000060000000004662502_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225742/10000100000000060000000000334548_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7809,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCownxWkAW6Edi7D6VntGIcvvN:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">48</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv13-w1.html">CCTV-13新聞</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv13/">CCTV-13新聞</a></div></td>
     <td><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-13-HQ/1.m3u8">A</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225751/10000100000000060000000000334589_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,2573,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowkCwkRDyV4tfpw3IVN1xpFn:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">49</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv15-w1.html">CCTV-14少兒HD</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv14/">CCTV-14少兒HD</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227573/10000100000000060000000004662499_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.21:80/PLTV/88888973/224/3221225740/10000100000000060000000000334546_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,7810,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCowlLW+9H8/Cw+LdiLmahQz2w:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">50</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv16-w1.html">CCTV-15音樂</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv15/">CCTV-15音樂</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227281/10000100000000060000000001066427_0.smil">電信</a></div></td>
     <td><div align="center"><a href="http://112.89.121.22:80/PLTV/88888973/224/3221225756/10000100000000060000000000334620_0.smil/01.m3u8?fmt=ts2hls,504,01.m3u8,0,2571,0,0&amp;accountinfo=Wti4h1vlszvIgmJ2Rn+JT30YqhIlb959YafU65xwPQuFI6KpBBcFipVQNWSpm9U4cljBwkAKGt2Lq1W8IgjWjgzcX+uhk0/ut3dCvLMCownHoqwJBM+/BT/7Tde5vw+Z:20181110091937,END&amp;GuardEncType=2">聯通</a></div></td>
   </tr>
   <tr>
     <td><div align="center">51</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/cctv-cctv19-w1.html">CCTV-NEWS</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv19/">CCTV-NEWS</a></div></td>
     <td><div align="center"><a href="rtsp://183.59.156.50/PLTV/88888905/224/3221227064/10000100000000060000000000698831_0.smil">電信</a></div></td>
     <td><div align="center"></div></td>
   </tr>
@@ -361,7 +361,7 @@ header-img: "img/fm/05.jpg"
   </tr>
   <tr>
     <td><div align="center">57</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/phoenix-phoenixhk-w1.html">鳳凰香港台</a>*</div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/phoenix/phoenixhk/">鳳凰香港台</a>*</div></td>
     <td><div align="center"><a href="http://183.207.249.35/PLTV/3/224/3221226975/index.m3u8">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
