--- a/iptv.html
+++ b/iptv.html
@@ -109,7 +109,7 @@ header-img: "img/fm/05.jpg"
   </tr>
   <tr>
     <td><div align="center">15</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/tvb-tvb1-w1.html">翡翠台</a></div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/tvb/tvb1/">翡翠台</a></div></td>
     <td><div align="center"><a href="http://123.207.42.38/tvb.php?type=jade">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
@@ -121,13 +121,13 @@ header-img: "img/fm/05.jpg"
   </tr>
   <tr>
     <td><div align="center">17</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/tvb-tvb2-w1.html">明珠台</a>*</div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/tvb/tvb2/">明珠台</a>*</div></td>
     <td><div align="center"><a href="http://120.198.235.68/103.89.176.45:8278/Pearl/playlist.m3u8">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td><div align="center">18</div></td>
-    <td><div align="center"><a href="http://www.baitv.com/program/tvb-tvb11-w1.html">J2</a>*</div></td>
+    <td><div align="center"><a href="http://www.baitv.com/ext/tvb/tvb11/">J2</a>*</div></td>
     <td><div align="center"><a href="http://120.198.235.68/103.89.176.45:8278/J2/playlist.m3u8">A</a></div></td>
     <td><div align="center"></div></td>
   </tr>
