--- a/iptv.html
+++ b/iptv.html
@@ -26,16 +26,16 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td width="40"><div align="center">1</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/gztv/gztv1/">廣州綜合HD</a></div></td>
-    <td width="46"><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_dc2089877e7111e892905cb9018cf0d4">1</a></div></td>
-    <td width="46"><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8">2</a></div></td>
+    <td width="46"><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_dc2089877e7111e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td width="53"><div align="center"></div></td>
   </tr>
   <tr>
     <td width="40"><div align="center">2</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/gztv/gztv2/">廣州新聞HD</a></div></td>
-    <td width="46"><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4">1</a></div></td>
-    <td width="46"><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8">2</a></div></td>
+    <td width="46"><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8"></a></div></td>
   </tr>
@@ -82,15 +82,15 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td width="40"><div align="center">8</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/cctv/cctv5/">CCTV-5HD</a></div></td>
-    <td width="46"><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-5-CQ/1.m3u8">1</a></div></td>
-    <td width="46"><div align="center"><a href="http://121.31.30.90:8085/ysten-business/live/cctv-5/1.m3u8">2</a></div></td>
+    <td width="46"><div align="center"><a href="http://223.110.242.130:6610/gitv/live1/G_CCTV-5-CQ/1.m3u8">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://121.31.30.90:8085/ysten-business/live/cctv-5/1.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
-    <td><div align="center"><a href="http://121.31.30.90:8085/ysten-business/live/cctv-5/1.m3u8">B</a></div></td>
+    <td><div align="center"></div></td>
   </tr>
   <tr>
     <td width="40"><div align="center">9</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/shhai/shhai5/">五星體育</a></div></td>
-    <td width="46"><div align="center"><a href="http://gslbserv.itv.cmvideo.cn/index.m3u8?channel-id=bestzb&amp;Contentid=4612233678249154892&amp;livemode=1&amp;authCode=3a&amp;stbId=8A">1</a></div></td>
+    <td width="46"><div align="center"><a href="http://gslbserv.itv.cmvideo.cn/index.m3u8?channel-id=bestzb&amp;Contentid=4612233678249154892&amp;livemode=1&amp;authCode=3a&amp;stbId=8A">A</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
@@ -893,7 +893,6 @@ header-img: "img/fm/05.jpg"
 </table>
 </body>
 </html>
-
 <!-- English Version -->
 <!-- <div class="en post-container">
     <blockquote><p>Yet another iOS Developer. <br>
