--- a/bookmarks.html
+++ b/bookmarks.html
@@ -58,7 +58,7 @@ header-img: "img/fm/03.jpg"
   </tr>
   <tr>
     <td><div align="center"><a href="https://tieba.baidu.com/index.html">TieBa</a></div></td>
-    <td><div align="center"><a href="http://www.gaoloumi.com/forum.php">GaoLouMi</a></div></td>
+    <td><div align="center"><a href="http://gaoloumi.cc/forum.php?mod=forumdisplay&fid=34">GaoLouMi</a></div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="http://www.ditiezu.com/">DiTieZu</a></div></td>
@@ -73,14 +73,14 @@ header-img: "img/fm/03.jpg"
   </tr>
   <tr>
     <td><div align="center"><a href="https://github.com/gfw-breaker/ssr-accounts/blob/master/README.md">SSR-Github</a></div></td>
-    <td><div align="center"><a href="https://m.stool.gq/free_ssr">SSRTool</a></div></td>
+    <td><div align="center"><a href="https://www.ssrtool.com/tool/free_ssr">SSRTool</a></div></td>
   </tr>
   <tr>
     <td colspan="2"><div align="center">H</div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="https://www.xvideos.com/">XVIDEOS</a></div></td>
-    <td><div align="center"><a href="https://www.4443dd.com/">SiHu</a></div></td>
+    <td><div align="center"><a href="https://www.524zh.com/">SiHu</a></div></td>
   </tr>
   <tr>
     <td><div align="center"><a href="https://www.pornhub.com/">Pornhub</a></div></td>
