--- a/iptv.html
+++ b/iptv.html
@@ -137,7 +137,7 @@ header-img: "img/fm/05.jpg"
   </tr>
   <tr>
     <td width="40"><div align="center">15</div></td>
-    <td width="150"><div align="center"><a href="http://www.baitv.com/ext/tvb/tvb1/">翡翠台</a></div></td>
+    <td width="150"><div align="center"><a href="http://www.baitv.com/ext/tvb/tvb1/">翡翠台</a>*</div></td>
     <td width="46"><div align="center"><a href="http://123.207.42.38/tvb.php?type=jade">A</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td width="46"><div align="center"></div></td>
@@ -147,7 +147,7 @@ header-img: "img/fm/05.jpg"
     <td width="40"><div align="center">16</div></td>
     <td width="150"><div align="center"><a href="http://programme.tvb.com/tvbnewschannel">無線新聞</a>*</div></td>
     <td><div align="center"><a href="http://zikbo.lofter.com/0inews0">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td width="46"><div align="center"><a href="http://tvwandering.ueuo.com/LIVE/TVB.php?channel=inews&amp;Clear=3">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
@@ -171,7 +171,7 @@ header-img: "img/fm/05.jpg"
     <td width="40"><div align="center">19</div></td>
     <td width="150"><div align="center"><a href="http://programme.tvb.com/tvbfinanceinformationchannel">無線財經資訊台</a></div></td>
     <td><div align="center"><a href="http://e1.vdowowza.vip.hk1.tvb.com/tvblive/smil:mobilehd_financeintl.smil/playlist.m3u8">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td width="46"><div align="center"><a href="http://tvwandering.ueuo.com/LIVE/TVB.php?channel=finance&amp;Clear=3">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
