--- a/iptv.html
+++ b/iptv.html
@@ -17,6 +17,7 @@ header-img: "img/fm/05.jpg"
 </head>
 
 <body>
+<body>
 <table width="400" border="0">
   <tr>
     <td width="40"><div align="center"><strong>序號</strong></div></td>
@@ -26,16 +27,16 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td width="40"><div align="center">1</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/gztv/gztv1/">廣州綜合HD</a></div></td>
-    <td width="46"><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_dc2089877e7111e892905cb9018cf0d4">A</a></div></td>
-    <td width="46"><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8">B</a></div></td>
+    <td width="46"><div align="center"><a href="rtmp://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td width="53"><div align="center"></div></td>
   </tr>
   <tr>
     <td width="40"><div align="center">2</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/gztv/gztv2/">廣州新聞HD</a></div></td>
-    <td width="46"><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4">A</a></div></td>
-    <td width="46"><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8">B</a></div></td>
+    <td width="46"><div align="center"><a href="rtmp://play.gztv.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://play.gztv.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"><a href="http://23436.liveplay.myqcloud.com/live/23436_e2fd8e1e7e7111e892905cb9018cf0d4.m3u8"></a></div></td>
   </tr>
@@ -234,48 +235,48 @@ header-img: "img/fm/05.jpg"
   <tr>
     <td width="40"><div align="center">27</div></td>
     <td width="150"><div align="center"><a href="http://www.969368.com/portal/channel_detail.jsp?channel_id=66">廣州購物</a></div></td>
-    <td><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_741b268384b211e892905cb9018cf0d4">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td><div align="center"><a href="rtmp://play.gztv.com/live/23436_741b268384b211e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://play.gztv.com/live/23436_741b268384b211e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td width="40"><div align="center">28</div></td>
     <td width="150"><div align="center"><a href="http://www.969368.com/portal/channel_detail.jsp?channel_id=63">廣州生活</a></div></td>
-    <td><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_5fe853ef84b211e892905cb9018cf0d4">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td><div align="center"><a href="rtmp://play.gztv.com/live/23436_5fe853ef84b211e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://play.gztv.com/live/23436_5fe853ef84b211e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td width="40"><div align="center">29</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/gztv/gztv6/">廣州經濟</a></div></td>
-    <td><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_9a1e9e7a84b211e892905cb9018cf0d4">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td><div align="center"><a href="rtmp://play.gztv.com/live/23436_9a1e9e7a84b211e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://play.gztv.com/live/23436_9a1e9e7a84b211e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td width="40"><div align="center">30</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/gztv/gztv7/">廣州少兒</a></div></td>
-    <td><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_b2eb109d84b211e892905cb9018cf0d4">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td><div align="center"><a href="rtmp://play.gztv.com/live/23436_b2eb109d84b211e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://play.gztv.com/live/23436_b2eb109d84b211e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td width="40"><div align="center">31</div></td>
     <td width="150"><div align="center"><a href="http://www.969368.com/portal/channel_detail.jsp?channel_id=64">廣州競賽</a></div></td>
-    <td><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_e821bfc784b111e892905cb9018cf0d4">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td><div align="center"><a href="rtmp://play.gztv.com/live/23436_e821bfc784b111e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://play.gztv.com/live/23436_e821bfc784b111e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
     <td width="40"><div align="center">32</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/gztv/gztv4/">廣州影視</a></div></td>
-    <td><div align="center"><a href="rtmp://23436.liveplay.myqcloud.com/live/23436_8a1764ff84b211e892905cb9018cf0d4">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td><div align="center"><a href="rtmp://play.gztv.com/live/23436_8a1764ff84b211e892905cb9018cf0d4">A</a></div></td>
+    <td width="46"><div align="center"><a href="http://play.gztv.com/live/23436_8a1764ff84b211e892905cb9018cf0d4.m3u8">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
@@ -880,15 +881,15 @@ header-img: "img/fm/05.jpg"
     <td><div align="center"></div></td>
   </tr>
   <tr>
-    <td width="40"><div align="center">108</div></td>
-    <td width="150"><div align="center"><a href="https://fash1043.cloudycdn.services/slive/_definst_/ftv_ftv_midnite_k1y_27049_midnite_secr_108_hls.smil/playlist.m3u8">Ffashion TV</a></div></td>
+    <td><div align="center">108</div></td>
+    <td><div align="center"><a href="https://fash1043.cloudycdn.services/slive/_definst_/ftv_ftv_midnite_k1y_27049_midnite_secr_108_hls.smil/playlist.m3u8">Ffashion TV</a></div></td>
     <td><div align="center"><a href="https://fash1043.cloudycdn.services/slive/_definst_/ftv_ftv_midnite_k1y_27049_midnite_secr_108_hls.smil/playlist.m3u8">A</a></div></td>
-    <td width="46"><div align="center"></div></td>
-    <td width="46"><div align="center"></div></td>
+    <td><div align="center"></div></td>
+    <td><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
   <tr>
-    <td colspan="6"><div align="center"><a href="https://potplayer.daum.net/">PotPlayer</a>播放器(Windows) / <a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/apk/mpv.apk">MPV</a>播放器(Android)</div></td>
+    <td colspan="6"><div align="center"><a href="https://potplayer.daum.net/">PotPlayer</a>(Windows) / <a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/apk/mpv.apk">MPV</a>、<a href="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/apk/cjzb.apk">HDZHIBO</a>(Android)</div></td>
   </tr>
 </table>
 </body>
