--- a/iptv/iptvs.html
+++ b/iptv/iptvs.html
@@ -1,9 +1,10 @@
 ---
 layout: page
-
-description: "Hey, this is HB."
-header-img: "img/bg1.jpg"
+title: ""
+description: "IPTVS"
+header-img: "img/fm/05.jpg"
 ---
+
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
@@ -12,26 +13,54 @@ header-img: "img/bg1.jpg"
 
 <!-- Chinese Version -->
 <div class="zh post-container">
+<p>
+</head>
 
-<audio autoplay="autoplay">
-  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/CGBC.mp3" />
-</audio>
-
-    <blockquote><p>Hello，我是<strong>海斌(HB)</strong><p>
-    <h5>基本信息</h5>
-    <p><strong>所在地:</strong>廣東 廣州</a> <p>
-    <p><strong>性別:</strong>男</a> <p>
-    <p><strong>生日:</strong>08-16 獅子座</a> <p>
-    <h5>聯繫方式</h5>
-    <p><strong>Wechat:</strong><a href="http://img1.ph.126.net/wl-ClgcgEIbWaJvp9WmTkA==/1281555568983521170.jpg">Heaven-Pan</a> <p> 
-    <p><strong>Weibo:</strong><a href="https://weibo.com/1773645060/profile?topnav=1">Hoi_Ban</a> <p>
-    <p><strong>Instagran:</strong><a href="https://www.instagram.com/94pan">94PAN</a> <p></blockquote>
-    <p></p>
-</div>
-
-
-
-
+<body>
+<table width="400" border="0">
+  <tr>
+    <td><div align="center"><a href="http://123.207.42.38/tvb.php?type=jade"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/jade.jpg" width="195" height="110" /></a></div></td>
+    <td><div align="center"><a href="http://zikbo.lofter.com/0inews0"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/inews.jpg" width="195" height="110" /></a></div></td>
+  </tr>
+  <tr>
+    <td><div align="center"><a href="http://www.baitv.com/ext/tvb/tvb1/">翡翠台</a></div></td>
+    <td><div align="center"><a href="http://programme.tvb.com/tvbnewschannel">無線新聞台*</a></div></td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
+</table>
+</body>
+</html>
 <!-- English Version -->
 <!-- <div class="en post-container">
     <blockquote><p>Yet another iOS Developer. <br>
@@ -43,4 +72,91 @@ header-img: "img/bg1.jpg"
     <h5>Talks</h5>
     <ul>
     <li><a href="https://github.com">GitHub</a></li>
-    <li><a href="http://
+    <li><a href="http://jekyll.com.cn/">jekyll</a></li>
+    <li><a href="https://pages.github.com/">GitHub Pages</a></li>
+    <li><a href="https://qiubaiying.github.io">BY</a></li>
+    </ul>
+</div> -->
+
+<!-- Handle Language Change -->
+<script type="text/javascript">
+    // get nodes
+    var $zh = document.querySelector(".zh");
+    var $en = document.querySelector(".en");
+    var $select = document.querySelector("select");
+    // bind hashchange event
+    window.addEventListener('hashchange', _render);
+    // handle render
+    function _render(){
+        var _hash = window.location.hash;
+        // en
+        if(_hash == "#en"){
+            $select.selectedIndex = 1;
+            $en.style.display = "block";
+            $zh.style.display = "none";
+        // zh by default
+        }else{
+            // not trigger onChange, otherwise cause a loop call.
+            $select.selectedIndex = 0;
+            $zh.style.display = "block";
+            $en.style.display = "none";
+        }
+    }
+    // handle select change
+    function onLanChange(index){
+        if(index == 0){
+            window.location.hash = "#zh"
+        }else{
+            window.location.hash = "#en"
+        }
+    }
+    // init
+    _render();
+</script>
+
+
+<!-- Gitalk 评论 start  -->
+{% if site.gitalk.enable %}
+<!-- Gitalk link  -->
+<link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+<script src="https://unpkg.com/gitalk@latest/dist/gitalk.min.js"></script>
+
+<div id="gitalk-container"></div>
+    <script type="text/javascript">
+    var gitalk = new Gitalk({
+    clientID: '{{site.gitalk.clientID}}',
+    clientSecret: '{{site.gitalk.clientSecret}}',
+    repo: '{{site.gitalk.repo}}',
+    owner: '{{site.gitalk.owner}}',
+    admin: ['{{site.gitalk.admin}}'],
+
+    id: 'about',
+    });
+    gitalk.render('gitalk-container');
+</script>
+{% endif %}
+<!-- Gitalk end -->
+
+ <!-- disqus 评论框 start  -->
+{% if site.disqus.enable %}
+
+<div class="comment">
+    <div id="disqus_thread" class="disqus-thread">
+    </div>
+</div>
+<!-- disqus 评论框 end -->
+
+<!-- disqus 公共JS代码 start (一个网页只需插入一次) -->
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = "{{site.disqus.username}}";
+    var disqus_identifier = "{{site.disqus.username}}/{{page.url}}";
+    var disqus_url = "{{site.url}}{{page.url}}";
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<!-- disqus 公共JS代码 end -->
+{% endif %}
